@@ -2,6 +2,10 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  05 Jan 2006; Mike Auty <ikelos@gentoo.org>:
+  Update the server and eclass einfo/elog statements in line with the 
+  portage ebuilds.
+  
   30 Dec 2006; Mike Auty <ikelos@gentoo.org>:
   Removed a -f from the modprobe-over-insmod patch for server.
   Leaving this to test for a little while, if there's no complaints
